refactor email verify to post only and frontend redirect
